call logs initial flow completed

--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -69,7 +69,15 @@
               </h6>
             </div>
           </li>   
-           
+
+          <li class="sidebar-main-title">
+            <div>
+              <h6 class="lan-21">
+                <a href="{% url 'live_call_list' %}" class="lan-21 no-color-change" style="all: inherit;cursor: pointer;">live Monitoring</a>
+              </h6>
+            </div>
+          </li>   
+                      
 
         </li>  
 
