end call flow added create campaign restrictions added

--- a/zonoapp/templates/pages/campaign/create_campaign.html
+++ b/zonoapp/templates/pages/campaign/create_campaign.html
@@ -28,13 +28,13 @@
                           <h4>Contacts</h4>
                         </div>
                       </div>
-                      </a><a class="nav-link b-r-0" id="payment-wizard-tab" data-bs-toggle="pill" href="#payment-wizard" role="tab" aria-controls="payment-wizard" aria-selected="false" > 
+                      </a><a class="nav-link b-r-0" id="payment-wizard-tab" data-bs-toggle="pill" href="#payment-wizard" role="tab" aria-controls="payment-wizard" aria-selected="false" disabled> 
                         <div class="cart-options">
                           <div class="stroke-icon-wizard"><i class="fa fa-user"></i></div>
                           <div class="cart-options-content"> 
                             <h4>Agent</h4>
                           </div>
-                        </div></a><a class="nav-link b-r-0" id="finish-wizard-tab" data-bs-toggle="pill" href="#finish-wizard" role="tab" aria-controls="finish-wizard" aria-selected="false"> 
+                        </div></a><a class="nav-link b-r-0" id="finish-wizard-tab" data-bs-toggle="pill" href="#finish-wizard" role="tab" aria-controls="finish-wizard" aria-selected="false" disabled> 
                     <div class="cart-options">
                       <div class="stroke-icon-wizard"><i class="fa fa-check-square"></i></div>
                       <div class="cart-options-content"> 
